Fix overflow-x

--- a/client/src/styles/base/_general.scss
+++ b/client/src/styles/base/_general.scss
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   font-family: $font-name-lexend, $font-family-sans-serif;
+  overflow-x: hidden;
 }
 
 a {
